--- a/Real Time Fruit Counter/RealTimeFruitCounter.ipynb
+++ b/Real Time Fruit Counter/RealTimeFruitCounter.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>Model Trained in Google Colab Link: <a>https://colab.research.google.com/drive/1W9cOFxjz2n3k_7QvDLmzH3Jau7uiJ39I</a></p>"
+    "<p>Model Trained in Google Colab <a href=\"https://colab.research.google.com/drive/1W9cOFxjz2n3k_7QvDLmzH3Jau7uiJ39I\">Link</a></p>"
    ]
   },
   {
