--- a/Real Time Plant Disease Detection/RealTimePlantDIseaseDetection.ipynb
+++ b/Real Time Plant Disease Detection/RealTimePlantDIseaseDetection.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a href=\"https://colab.research.google.com/drive/1SIJULkGKsbP2NDIS8XKh-YRto1obyZxu\">Model Trained in Google Colab Link</p>"
+    "<p>Model trained in Google Colabe <a href=\"https://colab.research.google.com/drive/1SIJULkGKsbP2NDIS8XKh-YRto1obyZxu\">Link</a></p>"
    ]
   },
   {
