--- a/Real Time Light Detection/LightDetection.ipynb
+++ b/Real Time Light Detection/LightDetection.ipynb
@@ -1,21 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\mdsaz\\.conda\\envs\\likhon\\lib\\site-packages\\scipy\\__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.24.4\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
-     ]
-    }
-   ],
    "source": [
-    "from filterpy.kalman import KalmanFilter"
+    "<h1 style=\"text-align: center\">Real Time Light Detection</h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>Model Trained in Google Colab <a href=\"https://colab.research.google.com/drive/1W9cOFxjz2n3k_7QvDLmzH3Jau7uiJ39I\">Link</a></p>"
    ]
   },
   {
