--- a/Real Time Weather Detection/RealTimeWeatherDetection.ipynb
+++ b/Real Time Weather Detection/RealTimeWeatherDetection.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,46 +57,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cap = cv2.VideoCapture(\"/video/Weather Data.mp4\")"
+    "cap = cv2.VideoCapture(\"video/Weather Data.mp4\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "0: 640x640 1 Nimbostratus, 2217.1ms\n",
+      "Speed: 5.0ms preprocess, 2217.1ms inference, 1.0ms postprocess per image at shape (1, 3, 640, 640)\n",
       "\n",
-      "0: 640x640 1 Nimbostratus, 2134.8ms\n",
-      "Speed: 1.0ms preprocess, 2134.8ms inference, 0.0ms postprocess per image at shape (1, 3, 640, 640)\n",
+      "0: 640x640 1 Nimbostratus, 2308.1ms\n",
+      "Speed: 5.0ms preprocess, 2308.1ms inference, 0.0ms postprocess per image at shape (1, 3, 640, 640)\n",
       "\n",
-      "0: 640x640 1 Nimbostratus, 2301.9ms\n",
-      "Speed: 0.0ms preprocess, 2301.9ms inference, 0.0ms postprocess per image at shape (1, 3, 640, 640)\n",
+      "0: 640x640 1 Nimbostratus, 2377.9ms\n",
+      "Speed: 3.7ms preprocess, 2377.9ms inference, 0.0ms postprocess per image at shape (1, 3, 640, 640)\n",
       "\n",
-      "0: 640x640 1 Nimbostratus, 2276.2ms\n",
-      "Speed: 4.8ms preprocess, 2276.2ms inference, 15.0ms postprocess per image at shape (1, 3, 640, 640)\n",
+      "0: 640x640 1 Cirrus, 2427.2ms\n",
+      "Speed: 2.2ms preprocess, 2427.2ms inference, 0.0ms postprocess per image at shape (1, 3, 640, 640)\n",
       "\n",
-      "0: 640x640 1 Cirrus, 2310.6ms\n",
-      "Speed: 5.0ms preprocess, 2310.6ms inference, 15.6ms postprocess per image at shape (1, 3, 640, 640)\n",
+      "0: 640x640 1 Cirrus, 2339.9ms\n",
+      "Speed: 6.0ms preprocess, 2339.9ms inference, 1.7ms postprocess per image at shape (1, 3, 640, 640)\n",
       "\n",
-      "0: 640x640 1 Cirrus, 2307.8ms\n",
-      "Speed: 2.9ms preprocess, 2307.8ms inference, 0.0ms postprocess per image at shape (1, 3, 640, 640)\n",
+      "0: 640x640 1 Cirrus, 2465.1ms\n",
+      "Speed: 0.0ms preprocess, 2465.1ms inference, 0.0ms postprocess per image at shape (1, 3, 640, 640)\n",
       "\n",
-      "0: 640x640 1 Cirrus, 2313.4ms\n",
-      "Speed: 2.0ms preprocess, 2313.4ms inference, 0.0ms postprocess per image at shape (1, 3, 640, 640)\n",
+      "0: 640x640 1 Nimbostratus, 2312.2ms\n",
+      "Speed: 0.0ms preprocess, 2312.2ms inference, 0.0ms postprocess per image at shape (1, 3, 640, 640)\n",
       "\n",
-      "0: 640x640 1 Nimbostratus, 2294.0ms\n",
-      "Speed: 4.0ms preprocess, 2294.0ms inference, 0.0ms postprocess per image at shape (1, 3, 640, 640)\n",
+      "0: 640x640 1 Nimbostratus, 2344.2ms\n",
+      "Speed: 0.0ms preprocess, 2344.2ms inference, 2.2ms postprocess per image at shape (1, 3, 640, 640)\n",
       "\n",
-      "0: 640x640 1 Nimbostratus, 2259.8ms\n",
-      "Speed: 0.0ms preprocess, 2259.8ms inference, 1.0ms postprocess per image at shape (1, 3, 640, 640)\n"
+      "0: 640x640 1 Cirrostratus, 2259.2ms\n",
+      "Speed: 1.9ms preprocess, 2259.2ms inference, 0.0ms postprocess per image at shape (1, 3, 640, 640)\n",
+      "\n",
+      "0: 640x640 1 Cirrostratus, 2461.0ms\n",
+      "Speed: 2.0ms preprocess, 2461.0ms inference, 0.0ms postprocess per image at shape (1, 3, 640, 640)\n",
+      "\n",
+      "0: 640x640 1 Cirrostratus, 2320.4ms\n",
+      "Speed: 9.4ms preprocess, 2320.4ms inference, 0.0ms postprocess per image at shape (1, 3, 640, 640)\n",
+      "\n",
+      "0: 640x640 1 Cirrostratus, 2402.4ms\n",
+      "Speed: 0.0ms preprocess, 2402.4ms inference, 0.0ms postprocess per image at shape (1, 3, 640, 640)\n",
+      "\n",
+      "0: 640x640 1 Cirrostratus, 2409.9ms\n",
+      "Speed: 6.6ms preprocess, 2409.9ms inference, 2.0ms postprocess per image at shape (1, 3, 640, 640)\n"
      ]
     }
    ],
