--- a/The Real TIme Farmer Management system/RealTimeFarmerManagement.ipynb
+++ b/The Real TIme Farmer Management system/RealTimeFarmerManagement.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1 style=\"text-align: center\">Real Time Farmer Counting for Specific Zones</h1>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +105,7 @@
     "\n",
     "while True:\n",
     "    success, img = cap.read()\n",
-    "    imgRegion = cv2.bitwise_and(img, mask)\n",
+    "    # imgRegion = cv2.bitwise_and(img, mask)\n",
     "    results = model(img, stream=True)\n",
     "    detections = []\n",
     "\n",
@@ -123,7 +130,7 @@
     "\n",
     "        unique_ids.add(id)\n",
     "\n",
-    "    cv2.putText(img, f\"Total Farmers: {len(unique_ids)}\", (50, 50), cv2.FONT_HERSHEY_PLAIN, 3, (50, 50, 255), 3)\n",
+    "    cv2.putText(img, f\"Total Farmers: {len(unique_ids)}\", (50, 50), cv2.FONT_HERSHEY_PLAIN, 3, (255, 0, 255), 3)\n",
     "\n",
     "    cv2.imshow(\"Real Time Fruit Counting\", img)\n",
     "    if cv2.waitKey(25) & 0xFF == ord('q'):\n",
