--- a/Real Time Weather Detection/RealTimeWeatherDetection.ipynb
+++ b/Real Time Weather Detection/RealTimeWeatherDetection.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 style=\"text-align: center\">Real Time Plant Weather Detection</h1>"
+    "<h1 style=\"text-align: center\">Real Time Weather Detection</h1>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>Model trained in Google Colabe <a href=\"https://colab.research.google.com/drive/127AF7hSAcBzBTGYqkpQcFlulGoqdg44p#scrollTo=emjVBLEcRwKk\">Link</a></p>"
+    "<h3>🔗 Model trained in Google Colab <a href=\"https://colab.research.google.com/drive/127AF7hSAcBzBTGYqkpQcFlulGoqdg44p#scrollTo=emjVBLEcRwKk\">Link</a></h3>"
    ]
   },
   {
